# mechayabashi

./: .gitignore  README.md  pyproject.toml
migration/: 001.sql
src/: discordbot.py  make_dict.py  make_sentence.py  migration.py  misskey.py  ngram.py
src/importer/: importer.py  nitter.py  twitter_archive.py
src/misskey/: .gitignore  Cargo.toml
src/misskey/src/: main.rs
