[tool.poetry]
name = "mecha-bayashi"
version = "0.1.0"
description = ""
authors = ["Nakaya <eniehack@outlook.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mecha-bayashi"}]

[tool.poetry.dependencies]
python = "^3.11"
SudachiPy = "^0.6.8"
SudachiDict-core = "^20240109"
requests = "^2.31.0"
mypy = "^1.8.0"
ruff = "^0.1.14"
classopt = "^0.2.1"
nltk = "^3.8.1"
python-ulid = "^2.2.0"
cbor2 = "^5.6.1"

[tool.poetry.group.discord.dependencies]
discord-py = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I", "PLR"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
