[package]
name = "misskey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
clap = { version = "3.0.5", features = [ "derive" ] }
rand = "0.8.5"
futures = "0.3.30"
